--- a/Flaintartist/Base.lproj/Main.storyboard
+++ b/Flaintartist/Base.lproj/Main.storyboard
@@ -1276,14 +1276,14 @@
                         <viewControllerLayoutGuide type="bottom" id="E0r-Q3-AA4"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="O5L-aB-DRt">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="670"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oGf-jE-Rjh" customClass="IPDFCameraViewController">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="670"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MbM-rK-ota" customClass="SCNView">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="670"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                         <color key="backgroundColor" red="0.19376453760000001" green="0.50850099329999998" blue="0.85232251879999998" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
                                 </subviews>
@@ -2016,7 +2016,7 @@
             <objects>
                 <tableViewController id="ItS-ru-nAL" customClass="ReportVC" customModule="Flaintartist" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="eD9-pm-MNA">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="670"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
@@ -2185,7 +2185,7 @@
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B5w-gc-YfC" customClass="SCNView">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="382"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="371"/>
                                                                         <color key="backgroundColor" red="0.19376453757286072" green="0.50850099325180054" blue="0.85232251882553101" alpha="1" colorSpace="calibratedRGB"/>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YTl-Ir-FUA">
@@ -2254,7 +2254,7 @@
                                                                 <constraint firstItem="L1S-i0-EQe" firstAttribute="leading" secondItem="P7L-vS-EvP" secondAttribute="leading" id="4bI-HY-L76"/>
                                                                 <constraint firstAttribute="trailing" secondItem="L1S-i0-EQe" secondAttribute="trailing" id="BOd-Po-zEF"/>
                                                                 <constraint firstItem="B5w-gc-YfC" firstAttribute="top" secondItem="P7L-vS-EvP" secondAttribute="top" id="FX4-EO-7aH"/>
-                                                                <constraint firstAttribute="bottom" secondItem="B5w-gc-YfC" secondAttribute="bottom" constant="84" id="M7S-Qk-IVq"/>
+                                                                <constraint firstAttribute="bottom" secondItem="B5w-gc-YfC" secondAttribute="bottom" constant="95" id="M7S-Qk-IVq"/>
                                                                 <constraint firstAttribute="trailing" secondItem="B5w-gc-YfC" secondAttribute="trailing" id="Pax-26-SEi"/>
                                                                 <constraint firstAttribute="trailing" secondItem="YTl-Ir-FUA" secondAttribute="trailing" id="PjN-fb-Wqm"/>
                                                                 <constraint firstItem="YTl-Ir-FUA" firstAttribute="leading" secondItem="P7L-vS-EvP" secondAttribute="leading" id="VFa-0U-ICj"/>
@@ -2264,6 +2264,7 @@
                                                                 <constraint firstItem="B5w-gc-YfC" firstAttribute="leading" secondItem="P7L-vS-EvP" secondAttribute="leading" id="eKA-ju-WWv"/>
                                                                 <constraint firstItem="L1S-i0-EQe" firstAttribute="top" secondItem="P7L-vS-EvP" secondAttribute="top" constant="316" id="faj-0G-VXD"/>
                                                             </constraints>
+                                                            <size key="customSize" width="375" height="466"/>
                                                             <connections>
                                                                 <outlet property="descLbl" destination="3Eb-eF-NLk" id="PSH-QB-1AI"/>
                                                                 <outlet property="infoView" destination="YTl-Ir-FUA" id="tHl-cY-PUU"/>
@@ -2331,7 +2332,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QcS-K8-pA6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2110" y="141"/>
+            <point key="canvasLocation" x="2109.5999999999999" y="140.77961019490255"/>
         </scene>
         <!--WebVC-->
         <scene sceneID="H2w-2l-Did">
@@ -2826,10 +2827,25 @@
                     <tabBarItem key="tabBarItem" title="Item" id="Atw-gM-Upb"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="n8u-eG-10V">
-                        <view key="titleView" contentMode="scaleToFill" id="Kgm-lu-2fG">
-                            <rect key="frame" x="113" y="-23" width="150" height="90"/>
+                        <nil key="title"/>
+                        <view key="titleView" contentMode="scaleToFill" id="pIS-0b-nlj">
+                            <rect key="frame" x="113" y="6" width="150" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Fc-fe-2aH">
+                                    <rect key="frame" x="8" y="8" width="134" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="6Fc-fe-2aH" secondAttribute="trailing" constant="8" id="21k-T8-NQK"/>
+                                <constraint firstItem="6Fc-fe-2aH" firstAttribute="leading" secondItem="pIS-0b-nlj" secondAttribute="leading" constant="8" id="MZ2-xG-T4g"/>
+                                <constraint firstAttribute="bottom" secondItem="6Fc-fe-2aH" secondAttribute="bottom" constant="4" id="Zr2-He-061"/>
+                                <constraint firstItem="6Fc-fe-2aH" firstAttribute="top" secondItem="pIS-0b-nlj" secondAttribute="top" constant="8" id="ufa-Ga-gZJ"/>
+                            </constraints>
                         </view>
                     </navigationItem>
                     <connections>
@@ -2837,12 +2853,13 @@
                         <outlet property="collectionView" destination="jb5-x6-xmT" id="fW2-Rm-kn1"/>
                         <outlet property="nameLbl" destination="PRW-nV-ebA" id="kyp-fc-Kpz"/>
                         <outlet property="profileImageView" destination="TUS-N4-eDy" id="POi-Jr-qwB"/>
+                        <outlet property="titleLbl" destination="6Fc-fe-2aH" id="grq-0V-W52"/>
                         <segue destination="v28-s4-pGk" kind="show" identifier="ReportVC" id="FpP-eb-vxh"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mbw-82-YPq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1954" y="-1427"/>
+            <point key="canvasLocation" x="1952.8" y="-1427.5862068965519"/>
         </scene>
     </scenes>
     <resources>
@@ -2866,9 +2883,9 @@
         <image name="sign up" width="56" height="56"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="DcI-70-PPp"/>
-        <segue reference="lm1-1w-gIw"/>
+        <segue reference="bfR-LN-edH"/>
+        <segue reference="bPj-2Z-qcd"/>
         <segue reference="cdh-Ds-5B8"/>
-        <segue reference="sow-rA-YQm"/>
+        <segue reference="FpP-eb-vxh"/>
     </inferredMetricsTieBreakers>
 </document>
