--- a/Flaintartist/Size.xib
+++ b/Flaintartist/Size.xib
@@ -29,15 +29,21 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <slider opaque="NO" multipleTouchEnabled="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="gk2-Dq-0CU">
-                    <rect key="frame" x="30" y="124" width="315" height="31"/>
+                    <rect key="frame" x="30" y="103" width="315" height="31"/>
                     <color key="minimumTrackTintColor" red="0.42655369640000002" green="0.475846082" blue="0.4802647531" alpha="1" colorSpace="calibratedRGB"/>
+                    <connections>
+                        <action selector="SliderValueChanged:" destination="-1" eventType="valueChanged" id="ZzT-QC-Au9"/>
+                    </connections>
                 </slider>
                 <slider opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Mq8-ev-PtS">
-                    <rect key="frame" x="30" y="35" width="315" height="61"/>
+                    <rect key="frame" x="30" y="25" width="315" height="61"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="60" id="1SL-ta-Hm0"/>
                     </constraints>
                     <color key="minimumTrackTintColor" red="0.42655369640000002" green="0.475846082" blue="0.4802647531" alpha="1" colorSpace="calibratedRGB"/>
+                    <connections>
+                        <action selector="SliderValueChanged:" destination="-1" eventType="valueChanged" id="3ZX-dQ-Ans"/>
+                    </connections>
                 </slider>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Height" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DgM-Lm-bUX">
                     <rect key="frame" x="47" y="0.0" width="120" height="16"/>
@@ -61,13 +67,13 @@
                 <constraint firstItem="gk2-Dq-0CU" firstAttribute="trailing" secondItem="Mq8-ev-PtS" secondAttribute="trailing" id="WbW-3Y-3c9"/>
                 <constraint firstItem="DgM-Lm-bUX" firstAttribute="baseline" secondItem="txu-zL-Zky" secondAttribute="baseline" id="bQq-2x-I6r"/>
                 <constraint firstItem="DgM-Lm-bUX" firstAttribute="top" secondItem="kYf-0L-FQf" secondAttribute="top" id="dVD-kY-2Fm"/>
-                <constraint firstItem="gk2-Dq-0CU" firstAttribute="top" secondItem="Mq8-ev-PtS" secondAttribute="bottom" constant="29" id="f7L-SF-lKo"/>
+                <constraint firstItem="gk2-Dq-0CU" firstAttribute="top" secondItem="Mq8-ev-PtS" secondAttribute="bottom" constant="18" id="f7L-SF-lKo"/>
                 <constraint firstItem="DgM-Lm-bUX" firstAttribute="leading" secondItem="kYf-0L-FQf" secondAttribute="leading" constant="47" id="fpG-Sf-3BB"/>
                 <constraint firstItem="gk2-Dq-0CU" firstAttribute="leading" secondItem="Mq8-ev-PtS" secondAttribute="leading" id="hNh-Jg-k72"/>
                 <constraint firstItem="txu-zL-Zky" firstAttribute="leading" secondItem="DgM-Lm-bUX" secondAttribute="trailing" constant="41" id="rHD-kp-69A"/>
                 <constraint firstItem="Mq8-ev-PtS" firstAttribute="centerX" secondItem="kYf-0L-FQf" secondAttribute="centerX" id="v3F-qp-zT5"/>
                 <constraint firstItem="DgM-Lm-bUX" firstAttribute="firstBaseline" secondItem="txu-zL-Zky" secondAttribute="firstBaseline" id="w95-x2-1ZL"/>
-                <constraint firstItem="Mq8-ev-PtS" firstAttribute="top" secondItem="txu-zL-Zky" secondAttribute="bottom" constant="19" id="zpH-6p-gUu"/>
+                <constraint firstItem="Mq8-ev-PtS" firstAttribute="top" secondItem="txu-zL-Zky" secondAttribute="bottom" constant="9" id="zpH-6p-gUu"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="-47.5" y="48"/>
